--- a/Forte/Base.lproj/Main.storyboard
+++ b/Forte/Base.lproj/Main.storyboard
@@ -99,21 +99,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MarkedItemCell" rowHeight="80" id="8Sj-Ta-Lpo" customClass="MarkedItemTableViewCell" customModule="Forte" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MarkedItemCell" rowHeight="80" id="8Sj-Ta-Lpo" customClass="MarkedItemTableViewCell" customModule="Forte" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8Sj-Ta-Lpo" id="M3Y-bn-uTS">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="567" height="79"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9wo-yk-hz2">
-                                            <rect key="frame" x="18" y="8" width="564" height="21"/>
+                                            <rect key="frame" x="18" y="8" width="531" height="21"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meaning" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRx-Ae-krS">
-                                            <rect key="frame" x="25" y="36" width="557" height="17"/>
+                                            <rect key="frame" x="25" y="36" width="524" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -131,6 +131,7 @@
                                 <connections>
                                     <outlet property="markedMeaningLabel" destination="jRx-Ae-krS" id="fhy-ne-RFB"/>
                                     <outlet property="markedTermLabel" destination="9wo-yk-hz2" id="vJd-bU-HMQ"/>
+                                    <segue destination="tCt-aM-fIS" kind="show" identifier="showItemCustomVC" id="Km2-u9-YCV"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -144,6 +145,94 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MKR-Md-ItL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1186" y="983"/>
+        </scene>
+        <!--Detail-->
+        <scene sceneID="NJk-Cp-t9G">
+            <objects>
+                <tableViewController id="tCt-aM-fIS" customClass="ItemCustomTableViewController" customModule="Forte" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="xAo-uu-hmD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="" id="XFc-vz-pur">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemDetailedCell" rowHeight="200" id="Hqu-qd-pRM">
+                                        <rect key="frame" x="0.0" y="99" width="600" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hqu-qd-pRM" id="8ha-zF-lvu">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="199"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSa-5m-neR">
+                                                    <rect key="frame" x="23" y="18" width="554" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meaning goes here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFJ-MT-W4F">
+                                                    <rect key="frame" x="28" y="49" width="549" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="PSa-5m-neR" firstAttribute="top" secondItem="8ha-zF-lvu" secondAttribute="topMargin" constant="10" id="JNb-cY-G8q"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="PSa-5m-neR" secondAttribute="trailing" constant="15" id="LZ1-ZA-4g9"/>
+                                                <constraint firstItem="fFJ-MT-W4F" firstAttribute="top" secondItem="PSa-5m-neR" secondAttribute="bottom" constant="10" id="TmV-Ag-Cs9"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="fFJ-MT-W4F" secondAttribute="trailing" constant="15" id="d9u-aM-Ji2"/>
+                                                <constraint firstItem="fFJ-MT-W4F" firstAttribute="leading" secondItem="8ha-zF-lvu" secondAttribute="leadingMargin" constant="20" id="dW2-xJ-hAa"/>
+                                                <constraint firstItem="PSa-5m-neR" firstAttribute="leading" secondItem="8ha-zF-lvu" secondAttribute="leadingMargin" constant="15" id="kdD-xd-G24"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Note" id="O6k-Up-Qop">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="noteTakingCell" rowHeight="200" id="maG-Nd-DB8">
+                                        <rect key="frame" x="0.0" y="350" width="600" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="maG-Nd-DB8" id="aBv-CR-iyU">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="199"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="You can take note here. " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="n7B-4w-PRD">
+                                                    <rect key="frame" x="28" y="8" width="549" height="183"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="n7B-4w-PRD" firstAttribute="leading" secondItem="aBv-CR-iyU" secondAttribute="leadingMargin" constant="20" id="4hF-QX-HRl"/>
+                                                <constraint firstItem="n7B-4w-PRD" firstAttribute="top" secondItem="aBv-CR-iyU" secondAttribute="topMargin" id="6wJ-kd-veI"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="n7B-4w-PRD" secondAttribute="bottom" id="BWc-6S-Jbm"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="n7B-4w-PRD" secondAttribute="trailing" constant="15" id="JXT-po-W0Y"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="tCt-aM-fIS" id="irl-ft-TKh"/>
+                            <outlet property="delegate" destination="tCt-aM-fIS" id="2VG-k1-ozn"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Detail" id="k5a-Oh-pha"/>
+                    <connections>
+                        <outlet property="itemDetailCell" destination="Hqu-qd-pRM" id="dWO-TV-ori"/>
+                        <outlet property="itemDetailedCell" destination="Hqu-qd-pRM" id="ad4-QY-yK3"/>
+                        <outlet property="meaningLabel" destination="fFJ-MT-W4F" id="tzT-8R-6ec"/>
+                        <outlet property="noteTakingField" destination="n7B-4w-PRD" id="Psv-pt-Qhj"/>
+                        <outlet property="termLabel" destination="PSa-5m-neR" id="6yY-pT-4wn"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RcQ-o3-zZf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1867" y="983"/>
         </scene>
     </scenes>
 </document>
