--- a/Forte/Base.lproj/Main.storyboard
+++ b/Forte/Base.lproj/Main.storyboard
@@ -157,30 +157,31 @@
                         <sections>
                             <tableViewSection headerTitle="" id="XFc-vz-pur">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemDetailedCell" rowHeight="200" id="Hqu-qd-pRM">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="249" verticalCompressionResistancePriority="748" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemDetailedCell" rowHeight="200" id="Hqu-qd-pRM">
                                         <rect key="frame" x="0.0" y="99" width="600" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hqu-qd-pRM" id="8ha-zF-lvu">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="199"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSa-5m-neR">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Term" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSa-5m-neR">
                                                     <rect key="frame" x="23" y="18" width="554" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meaning goes here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFJ-MT-W4F">
-                                                    <rect key="frame" x="28" y="49" width="549" height="17"/>
+                                                    <rect key="frame" x="28" y="49" width="549" height="127"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="fFJ-MT-W4F" secondAttribute="bottom" constant="15" id="2sG-OP-HlF"/>
                                                 <constraint firstItem="PSa-5m-neR" firstAttribute="top" secondItem="8ha-zF-lvu" secondAttribute="topMargin" constant="10" id="JNb-cY-G8q"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="PSa-5m-neR" secondAttribute="trailing" constant="15" id="LZ1-ZA-4g9"/>
-                                                <constraint firstItem="fFJ-MT-W4F" firstAttribute="top" secondItem="PSa-5m-neR" secondAttribute="bottom" constant="10" id="TmV-Ag-Cs9"/>
+                                                <constraint firstItem="fFJ-MT-W4F" firstAttribute="top" secondItem="PSa-5m-neR" secondAttribute="bottom" priority="999" constant="10" id="TmV-Ag-Cs9"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="fFJ-MT-W4F" secondAttribute="trailing" constant="15" id="d9u-aM-Ji2"/>
                                                 <constraint firstItem="fFJ-MT-W4F" firstAttribute="leading" secondItem="8ha-zF-lvu" secondAttribute="leadingMargin" constant="20" id="dW2-xJ-hAa"/>
                                                 <constraint firstItem="PSa-5m-neR" firstAttribute="leading" secondItem="8ha-zF-lvu" secondAttribute="leadingMargin" constant="15" id="kdD-xd-G24"/>
@@ -198,8 +199,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="199"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="You can take note here. " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="n7B-4w-PRD">
-                                                    <rect key="frame" x="28" y="8" width="549" height="183"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="You can take note here. " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="n7B-4w-PRD">
+                                                    <rect key="frame" x="28" y="18" width="549" height="163"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -207,8 +208,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="n7B-4w-PRD" firstAttribute="leading" secondItem="aBv-CR-iyU" secondAttribute="leadingMargin" constant="20" id="4hF-QX-HRl"/>
-                                                <constraint firstItem="n7B-4w-PRD" firstAttribute="top" secondItem="aBv-CR-iyU" secondAttribute="topMargin" id="6wJ-kd-veI"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="n7B-4w-PRD" secondAttribute="bottom" id="BWc-6S-Jbm"/>
+                                                <constraint firstItem="n7B-4w-PRD" firstAttribute="top" secondItem="aBv-CR-iyU" secondAttribute="topMargin" constant="10" id="6wJ-kd-veI"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="n7B-4w-PRD" secondAttribute="bottom" constant="10" id="BWc-6S-Jbm"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="n7B-4w-PRD" secondAttribute="trailing" constant="15" id="JXT-po-W0Y"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -224,7 +225,6 @@
                     <navigationItem key="navigationItem" title="Detail" id="k5a-Oh-pha"/>
                     <connections>
                         <outlet property="itemDetailCell" destination="Hqu-qd-pRM" id="dWO-TV-ori"/>
-                        <outlet property="itemDetailedCell" destination="Hqu-qd-pRM" id="ad4-QY-yK3"/>
                         <outlet property="meaningLabel" destination="fFJ-MT-W4F" id="tzT-8R-6ec"/>
                         <outlet property="noteTakingField" destination="n7B-4w-PRD" id="Psv-pt-Qhj"/>
                         <outlet property="termLabel" destination="PSa-5m-neR" id="6yY-pT-4wn"/>
