--- a/Forte/GlossaryItemDetailedTableViewCell.xib
+++ b/Forte/GlossaryItemDetailedTableViewCell.xib
@@ -12,11 +12,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="274"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="273"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="273.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuG-Kz-Dnd">
-                        <rect key="frame" x="23" y="70" width="279" height="133"/>
+                        <rect key="frame" x="23" y="70" width="279" height="133.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -26,23 +26,23 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcZ-up-aT2">
-                        <rect key="frame" x="145" y="228" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="30" id="4Ng-ys-blF"/>
-                            <constraint firstAttribute="height" constant="30" id="mzr-21-FWQ"/>
-                        </constraints>
-                        <state key="normal" title="Button" image="Heart_grey"/>
-                        <connections>
-                            <action selector="starIcon:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Z0b-XP-EN7"/>
-                        </connections>
-                    </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Origin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZsK-ri-qZD">
                         <rect key="frame" x="23" y="45" width="274" height="16"/>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="13"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcZ-up-aT2">
+                        <rect key="frame" x="145.5" y="228.5" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="4Ng-ys-blF"/>
+                            <constraint firstAttribute="height" constant="30" id="mzr-21-FWQ"/>
+                        </constraints>
+                        <state key="normal" image="Heart_grey"/>
+                        <connections>
+                            <action selector="starIcon:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Z0b-XP-EN7"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="YuG-Kz-Dnd" firstAttribute="top" secondItem="ZsK-ri-qZD" secondAttribute="bottom" constant="9" id="2Vn-Du-9k0"/>
@@ -65,10 +65,10 @@
                 <outlet property="starIconOutlet" destination="pcZ-up-aT2" id="RAl-4u-buJ"/>
                 <outlet property="termLabel" destination="CNX-HL-vRg" id="OCs-f7-hmK"/>
             </connections>
-            <point key="canvasLocation" x="439" y="528.5"/>
+            <point key="canvasLocation" x="439" y="528"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Heart_grey" width="350" height="350"/>
+        <image name="Heart_grey" width="25" height="25"/>
     </resources>
 </document>
